--- a/PaginadeLogin/login.html
+++ b/PaginadeLogin/login.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Página de Login ♡</title>
     <link rel="stylesheet" type="text/css" href="flexbox.css">
 </head>
 <body>
+  <div class="box">
+    <div class="titulo-container">
+      <h1>♡ PÁGINA DE LOGIN ♡</h1>
+    </div>
     <div class="login-container">
+      <form>
         <h2>Email:</h2>
         <input type="email" id="email" placeholder="exemplo@gmail.com">
-        <but</button>
         <h2>Senha:</h2>
         <input type="password" id="password" placeholder="Senha">
-        <br>
-        <button onclick="checkPassword()">Entrar</button> <button onclick="limparCampos()">Limpar</button>
-        <p>
-        <a href="recovery.html">Esqueceu a senha?</a>
-          </p>
-
-
+        <p><a href="recovery.html">Esqueceu a senha?</a></p>
+        <button type="button" onclick="checkPassword()">Entrar</button>
+        <button type="button" onclick="limparCampos()">Limpar</button>
+      </form>
+    </div>
         <script>
             function checkPassword() {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-            // Aqui você pode adicionar a verificação de login
             alert(`Email: ${email}\nSenha: ${password}`);
             }
-
             function limparCampos() {
             document.getElementById('email').value = '';
             document.getElementById('password').value = '';
@@ -35,5 +35,7 @@
         </script>
 
     </div>
+
+  </div>
 </body>
 </html>
