--- a/PaginaLogin2/login.html
+++ b/PaginaLogin2/login.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="flexbox.css">
 </head>
 <body>
+  <div class="box">
     <div class="titulo-container">
       <h1>♡ PÁGINA DE LOGIN ♡</h1>
     </div>
-    <br>
     <div class="login-container">
       <form>
         <h2>Email:</h2>
@@ -35,5 +35,7 @@
         </script>
 
     </div>
+
+  </div>
 </body>
 </html>
